--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URL = mongodb+srv://dhruvsonani1008:mviekcVnCt33phSL@cluster0.uc0nhal.mongodb.net/pro-shoppers?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://dhruvsonani1008:mviekcVnCt33phSL@cluster0.uc0nhal.mongodb.net/Zwiggy_Meals?retryWrites=true&w=majority
+SECRET_TOKEN = dhruvsonani1008
